--- a/Week4/inp.in
+++ b/Week4/inp.in
@@ -1,16 +1,7 @@
-4 5
-1 2 1
-1 3 2
-2 4 1
-3 4 1
-4 1 2
-3 2
-1 2 2
-1 3 2
-3 2
-1 2 2
-1 3 1
-4 2
-1 2 2
-3 4 2
-0 0
+5
+aue oizer piqoi oizer
+doy oizer hweqlo hweqlo
+hweqlo piqoi aue
+oizer piqoi
+piqoi aue aue
+0
